--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,18 @@ h1 {
     border-radius: 5px;
 }
 
+#alreadySolved {
+    display: none;
+    justify-content: center;
+    font-weight: bold;
+    align-items: center;
+    margin-top: 20px;
+    background-color: #f9f9f9;
+    padding: 15px;
+    border-radius: 5px;
+    text-align: center;
+}
+
 .coefficient-input {
     display: flex;
     flex-direction: column;
